src/tests/snapshots/gitu__tests__log_grep_changes__grep_changes_no_match.snap
---
source: src/tests/log_grep_changes.rs
expression: ctx.redact_buffer()
---
▌No commits found                                                               |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 90ecdf643519e051
