src/tests/snapshots/gitu__tests__log_grep_changes__grep_changes_prompt.snap
---
source: src/tests/log_grep_changes.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is ahead of 'origin/main' by 3 commit(s).                          |
                                                                                |
 Recent commits                                                                 |
 a7fb92e main modify first                                                      |
 eb42c24 modify first                                                           |
 a086849 add first                                                              |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 Log                Arguments                                                   |
 l     current      -F Search messages (--grep)                                 |
 o     other        -G Search changes (-G)                                      |
 q/esc Quit/Close   -n Limit number of commits (-n=256)                         |
────────────────────────────────────────────────────────────────────────────────|
? Search changes: › █                                                           |
styles_hash: f31db5867a2f6c5d
